# Buglife_Simulator

./: .gitignore  CMakeLists.txt  main  main.cpp
data/: crawler-bugs.txt
src/: Board.cpp  Board.h  Crawler.cpp  Crawler.h  Hopper.cpp  Hopper.h  Knightcrawler.cpp  Knightcrawler.h  SuperBug.cpp  SuperBug.h
src/utils/: Bug.cpp  Bug.h  Direction.h  Position.h
